--- a/src/app/usit/components/consultant-components/consultant-openreqs/consultant-openreqs.component.html
+++ b/src/app/usit/components/consultant-components/consultant-openreqs/consultant-openreqs.component.html
@@ -1,33 +1,26 @@
 <div class="hot-list-container">
     <ul class="breadcrumb">
         <li><a (click)="navigateToDashboard()">Home</a></li>
-        <li class="last">Portal Requirements</li>
+        <li class="last">Job Requirements</li>
     </ul>
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
-            Portal Requirements
+            Job Requirements
         </span>
-        <div>
+        <!-- <div>
             <mat-form-field class="portal-form-field">
                 <mat-label>Select a Portal</mat-label>
                 <mat-select (selectionChange)="onSelectionChange($event)">
                     <mat-option value="all">All</mat-option>
-                    <!-- <mat-option value="adzuna">Adzuna</mat-option> -->
                     <mat-option value="dice">Dice</mat-option>
-                    <mat-option value="glassdoor">Glassdoor</mat-option>
                     <mat-option value="indeed">Indeed</mat-option>
-                    <mat-option value="insight global">Insight Global</mat-option>
-                    <mat-option value="jobdiva">Jobdiva</mat-option>
-                    <!-- <mat-option value="juju">Juju</mat-option> -->
                     <mat-option value="linkedin">LinkedIn</mat-option>
-                    <!-- <mat-option value="post job free">Post Job Free</mat-option> -->
                     <mat-option value="recruit.net">Recruit</mat-option>
                     <mat-option value="Simplyhired">Simply Hired</mat-option>
                     <mat-option value="techfetch">Tech Fetch</mat-option>   
-                    <!-- <mat-option value="snaprecruit">Snaprecruit</mat-option> -->
                 </mat-select>
             </mat-form-field>
-        </div>
+        </div> -->
         <div class="hot-list-actions">
             <div class="search-hot-list">
                 <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)">
@@ -49,58 +42,44 @@
                     <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
                 </ng-container>
 
-                <!-- Name Column-->
-                <ng-container matColumnDef="posted_on">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"
+                <!-- Posted on Column-->
+                <ng-container matColumnDef="postedon">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by postedon"
                         style="width: 2%">Posted On</th>
                     <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> {{element?.posted_on |
                         date:'MM-dd-yyyy HH:mm'  }} </td>
                 </ng-container>
 
-
-
-                <!-- Technology Column-->
+                <!-- Job Title Column-->
                 <ng-container matColumnDef="job_title">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology"
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by job_title"
                         style="width: 20%">
                         Title </th>
-                    <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
-                                href="{{element?.job_source}}" target="_blank"
-                                (click)="empTag(element.id)">{{element?.job_title|titlecase}}</a>
-                        </span> </td>
+                    <td mat-cell *matCellDef="let element" style="width: 20%">
+                        <span class="consultant-name" (click)="goToJobDescription(element)">
+                        {{element?.job_title|titlecase}}
+                        </span>
+                    </td>
                 </ng-container>
 
-                <!-- Visa Column-->
+                <!-- Category Column-->
                 <ng-container matColumnDef="category_skill">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Visa" style="width: 13%">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category" style="width: 13%">
                         Category </th>
                     <td mat-cell *matCellDef="let element"style="width: 13%">
                         {{ element?.category_skill | titlecase }} </td>
                 </ng-container>
 
-                <!-- Experience Column-->
+                <!-- Employment Type Column-->
                 <ng-container matColumnDef="employment_type">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"style="width: 3%"> Emp Type </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by employment_type" style="width: 3%"> Emp Type </th>
                     <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}} </td>
                 </ng-container>
 
+                <!-- Job Location Column-->
                 <ng-container matColumnDef="job_location">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"style="width: 10%"> Location </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Job Location" style="width: 10%"> Location </th>
                     <td mat-cell *matCellDef="let element"style="width: 10%">{{element?.job_location | titlecase}} </td>
-                </ng-container>
-
-                <!-- Rate Column-->
-                <ng-container matColumnDef="vendor">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Rate"style="width: 12%">
-                        Vendor</th>
-                        <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 12%"> {{element?.vendor | titlecase}}
-                        </td>
-                </ng-container>
-
-                <!-- Body Column-->
-                <ng-container matColumnDef="JobDescription">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by JobDescription" style=" width: 3% "> Job Description </th>
-                    <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"  style=" width: 3% ">VIEW </td>
                 </ng-container>
 
                 <!-- Source Column-->
@@ -110,17 +89,9 @@
                     <td mat-cell *matCellDef="let element" nowrap style="width: 3%"> {{ element?.source | titlecase}} </td>
                 </ng-container>
 
-                <!-- Priority Column-->
-                <!-- <ng-container matColumnDef="end_client">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Priority">
-                         Client</th>
-                    <td mat-cell *matCellDef="let element"> {{element?.end_client}}
-                    </td>
-                </ng-container> -->
-
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="getRowStyles(row)"></tr>
+                <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
             </table>
             <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
         </section>
