--- a/src/app/usit/components/vendor-management/known-vendor-contacts/add-known-vendor-contacts/add-known-vendor-contacts.component.html
+++ b/src/app/usit/components/vendor-management/known-vendor-contacts/add-known-vendor-contacts/add-known-vendor-contacts.component.html
@@ -31,13 +31,15 @@
                     </mat-error>
                 </mat-form-field>
 
-                
-
                 <mat-form-field appearance="fill">
                     <mat-label>Client</mat-label>
-                    <input matInput formControlName="client" maxlength="50" (input)="camelCase($event)" />
-                    <mat-error *ngIf="hotlistForm.get('client')!.hasError('required')"> Client Name is required
-                    </mat-error>
+                    <input matInput formControlName="client" maxlength="50"/>
+                </mat-form-field>
+
+                <mat-form-field appearance="fill">
+                    <mat-label>LinkedIn Profile URL</mat-label>
+                    <input matInput formControlName="linkedinProfilesUrl" maxlength="150" />
+                    <mat-error *ngIf="hotlistForm.get('linkedinProfilesUrl')!.hasError('required')"> LinkedIn Profile URL is required</mat-error>
                 </mat-form-field>
             </div>
 
@@ -47,8 +49,7 @@
                 <!-- Email -->
                 <mat-form-field appearance="fill">
                     <mat-label>Email</mat-label>
-                    <input matInput formControlName="email" (change)="emailDuplicate($event)"
-                        (input)="convertToLowerCase($event)" maxlength="50" />
+                    <input matInput formControlName="email" (change)="emailDuplicate($event)" maxlength="50" />
                     <mat-error *ngIf="hotlistForm.get('email')!.hasError('required')">Email is Required</mat-error>
                     <mat-error *ngIf="hotlistForm.get('email')!.hasError('pattern')">Invalid Email Address</mat-error>
                 </mat-form-field>
@@ -61,12 +62,16 @@
                         formControlName="referenceContactNumber" enablePlaceholder
                         enableSearch
                         enableSearchplaceholder="Enter Number"
-                        describedBy="phoneInput" required
+                        describedBy="phoneInput"
                         #phone
                         name="contactnumber" id="intlInput"> 
                     </ngx-mat-input-tel>
-                    <mat-error *ngIf="hotlistForm.get('referenceContactNumber').errors?.required && !hotlistForm.get('referenceContactNumber').errors?.validatePhoneNumber"> Contact Number is Required </mat-error>
-                    <mat-error *ngIf="hotlistForm.get('referenceContactNumber').errors?.required && hotlistForm.get('referenceContactNumber').errors?.validatePhoneNumber">Invalid Contact Number</mat-error>
+                </mat-form-field>
+
+                <mat-form-field class="description-field">
+                    <mat-label>Comments</mat-label>
+                    <textarea maxlength="250" rows="5" matInput formControlName="comments"></textarea>
+                    <mat-error *ngIf="hotlistForm.get('comments')!.hasError('required')">Comments Required</mat-error>
                 </mat-form-field>
             </div>
         </section>
