--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
@@ -1,20 +1,8 @@
 <div class="container">
-  <!-- <ul class="breadcrumb">
-    <li><a (click)="navigateToDashboard()">Home</a></li>
-    <li class="last">Vendors</li>
-  </ul> -->
   <div class="header-container mat-elevation-z1">
     <span class="header-text">
       Vendors
     </span>
-    <!-- <span class="filter-vendors">
-      <button mat-raised-button class="filter-button" color="warn" (click)="getAllVendorByType('Recruiting')">Recruiting
-        Companies</button>
-      <button mat-raised-button class="filter-button" color="primary" (click)="getAllVendorByType('Bench Sales')">Bench
-        Companies</button>
-      <button mat-raised-button class="filter-button" style="background-color: black; color: white;"
-        (click)="getAllVendorByType('Both')">Both Recruiting & Staffing</button>
-    </span> -->
     <div class="vendor-actions">
       <button mat-icon-button (click)="uploadVmsExcelData()" matTooltip="Upload VMS Excel Data" matTooltipPosition="above">
         <mat-icon class="item-icon">upload</mat-icon>
@@ -25,22 +13,14 @@
       </button>
 
       <div class="search-vendor">
-        <!-- <mat-icon class="item-icon">person_search</mat-icon> -->
         <input matInput type="text" class="search" placeholder="search vendor" (keyup)="applyFilter($event)">
       </div>
     </div>
   </div>
-  <!-- <div>
-    <mat-tab-group (selectedTabChange)="onTabChanged($event)" mat-stretch-tabs="false" mat-align-tabs="start" color="primary" backgroundColor="primary">
-      <mat-tab *ngFor="let tab of tabs" [label]="tab.label">
-        <ng-container *ngTemplateOutlet="tableTemplate; context: { status: tab.status }"></ng-container>
-      </mat-tab>
-    </mat-tab-group>
-  </div> -->
   <div id="table-container" class="table-wrapper">
     <mat-tab-group (selectedTabChange)="onTabChanged($event)" mat-stretch-tabs="false" mat-align-tabs="start" color="primary" backgroundColor="primary">
-      <mat-tab *ngFor="let tab of tabs" [label]="tab.label">
-        <ng-container *ngTemplateOutlet="tableTemplate; context: { status: tab.status }"></ng-container>
+      <mat-tab *ngFor="let tab of tabs" [label]="tab">
+        <ng-container *ngTemplateOutlet="tableTemplate; context: { status: tab }"></ng-container>
       </mat-tab>
     </mat-tab-group>
 
@@ -51,34 +31,28 @@
           <!--- Note that these columns can be defined in any order.
                 The actual rendered columns are set as a property on the row definition" -->
   
-          <!-- ID Column mat-sort-header sortActionDescription="Sort by Serial Number"-->
+          <!-- Serial Number Column -->
           <ng-container matColumnDef="SerialNum">
             <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No </th>
             <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
           </ng-container>
   
-          <!-- Company Column mat-sort-header sortActionDescription="Sort by Company"-->
+          <!-- Company Column -->
           <ng-container matColumnDef="Company">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Company</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header mat-sort-header sortActionDescription="Sort by Company"> Company</th>
             <td mat-cell *matCellDef="let element">
               <span class="company-recruiter-info" (click)="goToCompanyRecInfo(element)"> {{element.company| titlecase}}</span>
             </td>
           </ng-container>
   
-          <!-- HeadQuarter Column mat-sort-header sortActionDescription="Sort by Head Quarter"-->
+          <!-- HeadQuarter Column -->
           <ng-container matColumnDef="HeadQuarter">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by headquerter"> Head
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Head Quarter"> Head
               Quarter </th>
             <td mat-cell *matCellDef="let element" style="width: 20%"> {{element.headquerter | titlecase}} </td>
           </ng-container>
   
-          <!-- Fed-Id Column -->
-          <!-- <ng-container matColumnDef="Fed-Id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Fed-Id "> Fed-Id  </th>
-            <td mat-cell *matCellDef="let element"> {{element.fedid}} </td>
-          </ng-container> -->
-  
-          <!-- VendorType Column mat-sort-header  -->
+          <!-- VendorType Column -->
           <ng-container matColumnDef="VendorType">
             <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by vendortype"  mat-sort-header> Vendor Type
             </th>
@@ -112,24 +86,6 @@
               Updated </th>
             <td mat-cell *matCellDef="let element"> {{element.updateddate  | date:'MM-dd-yyyy'}} </td>
           </ng-container>
-  
-          <!-- Status Column -->
-          <!-- <ng-container matColumnDef="Status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Status"> Status </th>
-            <td mat-cell *matCellDef="let emp" [ngStyle]="{ backGroundColor: emp.status === 'Active' ? 'green' : 'accent' }" ><span><button mat-raised-button (click)="onStatusUpdate(emp)" > {{emp.status}}</button> </span></td>
-          </ng-container> -->
-          <!-- <ng-container matColumnDef="Status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Status"> Status </th>
-            <td mat-cell *matCellDef="let vendor">
-              <span>
-                <button mat-raised-button (click)="onStatusUpdate(vendor)"
-                  [ngStyle]="{ color: 'white' }"
-                  [ngClass]="vendor.status === 'Approved' ? 'mat-primary' : vendor.status === 'Active' ? 'mat-primary' : 'mat-warn'">
-                  {{ vendor.status }}
-                </button>
-              </span>
-            </td>
-          </ng-container> -->
   
           <!-- Action Column -->
           <ng-container matColumnDef="Action">
@@ -175,7 +131,6 @@
                 &nbsp;
               
                 <!-- Reject BUTTON -->
-              
                 <button [disabled]="!privilegeServ.hasPrivilege('STATUS_VENDOR')"
                   *ngIf="vendor.vms_stat !== 'Approved' && vendor.vms_stat !== 'Rejected' && vendor.vms_stat !== 'Blacklisted'"
                   mat-raised-button class="approve-reject-buttons" (click)="onApproveOrRejectVMS(vendor ,true)"
@@ -186,7 +141,7 @@
                 <button [disabled]="!privilegeServ.hasPrivilege('STATUS_VENDOR')" *ngIf="vendor.vms_stat === 'Blacklisted'"
                   mat-raised-button class="approve-reject-buttons" (click)="onApproveOrRejectVMS(vendor, true)"
                   [ngStyle]="{ color: 'white' }" style="width: 80px; height: 25px;" [ngClass]="'mat-warn'">
-                  {{'Blacklisted'}} <!-- Added button for Blacklisted status -->
+                  {{'Blacklisted'}}
                 </button>
               
                 <button [disabled]="!privilegeServ.hasPrivilege('STATUS_VENDOR')" *ngIf="vendor.vms_stat === 'Rejected'"
