--- a/src/app/usit/components/consultant-components/consultant-openreqs/consultant-openreqs.component.html
+++ b/src/app/usit/components/consultant-components/consultant-openreqs/consultant-openreqs.component.html
@@ -5,9 +5,9 @@
     </ul>
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
-            Job Requirements
+           Contract Job Requirements
         </span>
-        <!-- <div>
+       <!-- <div>
             <mat-form-field class="portal-form-field">
                 <mat-label>Select a Portal</mat-label>
                 <mat-select (selectionChange)="onSelectionChange($event)">
@@ -20,7 +20,7 @@
                     <mat-option value="techfetch">Tech Fetch</mat-option>   
                 </mat-select>
             </mat-form-field>
-        </div> -->
+        </div> --> 
         <div class="hot-list-actions">
             <div class="search-hot-list">
                 <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)">
